<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.mrizk.workpostureevaluationrula_reba.reba.RebaActivity">

    <include
        android:id="@+id/reba_toolbar"
        layout="@layout/view_toolbar" />

    <ImageView
        android:id="@+id/reba_imageView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@id/reba_toolbar"
        android:contentDescription="@string/reba_image_reba"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/reba_texViewInputGambar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reba_imageView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-15dp"
        android:text="@string/reba_choose_photo_source"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Space
        android:id="@+id/reba_centerPosition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/reba_texViewInputGambar"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:id="@+id/reba_cameraContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reba_texViewInputGambar"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@id/reba_centerPosition"
        android:layout_toStartOf="@id/reba_centerPosition"
        android:background="?android:selectableItemBackground"
        android:padding="12dp">

        <ImageView
            android:id="@+id/reba_cameraIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/reba_camera"
            android:src="@drawable/ic_camera_alt_black_24dp"
            android:tint="@color/white_icon" />

        <TextView
            android:id="@+id/reba_cameraString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reba_cameraIcon"
            android:layout_centerHorizontal="true"
            android:text="@string/reba_camera"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reba_galleryContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reba_texViewInputGambar"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@id/reba_centerPosition"
        android:layout_toRightOf="@id/reba_centerPosition"
        android:background="?android:selectableItemBackground"
        android:padding="12dp">

        <ImageView
            android:id="@+id/reba_galleryIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/reba_gallery"
            android:src="@drawable/ic_image_black_24dp"
            android:tint="@color/white_icon" />

        <TextView
            android:id="@+id/reba_galleryString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reba_galleryIcon"
            android:layout_centerHorizontal="true"
            android:text="@string/reba_gallery"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

</RelativeLayout>
